price comparison website

--- a/index.html
+++ b/index.html
@@ -92,5 +92,17 @@
             </form>
         </section>
     </div>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Example</title>
+</head>
+<body>
+    
+    <img src="https://bsmedia.business-standard.com/_media/bs/img/article/2018-09/04/full/1536077880-6555.jpg" alt="Description of the image">
+</body>
+</html>
 </body>
 </html>
